# sel4.run

./: CMakeLists.txt  README.md  manifest.xml  opensbi.cmake  overlay-tinyemu.dts  settings.cmake
apps/hello/: CMakeLists.txt  tinyemu.cfg
apps/hello/src/: main.c
scripts/: build-app.sh  build-sysroot.py  build-web.sh  build.sh  deploy-web.sh  run-web.sh  run.sh  web-smoke.mjs
web/: app.js  compiler-worker.js  emulator-worker.js  index.html
web/examples/: 01-hello.c  02-bootinfo.c  03-initial-caps.c  04-endpoint.c  05-ipc.c  06-notification.c  07-thread.c  08-untyped.c  09-map-frame.c  10-fault.c  index.json
